Bug 338659 - Plasmashell randomly crashes with no Klipper interaction
Summary: Plasmashell randomly crashes with no Klipper interaction
Status: RESOLVED FIXED
Alias: None
Product: klipper
Classification: Unmaintained
Component: plasma-widget (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Flöser
URL:
Keywords:
: 338638 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-08-29 15:23 UTC by Martin Klapetek
Modified: 2014-09-01 12:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Klapetek 2014-08-29 15:23:04 UTC
So there I am, browsing the interwebs and suddenly plasma goes down. I surely didn't copy anything nor select-copy, I was just happily browsing. It happens randomly, I've seen it about 5 times now.


Thread 1 (Thread 0x7f082e6577c0 (LWP 12350)):
[KCrash Handler]
#6  0x00007f0827bb3f89 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#7  0x00007f0827bb7398 in __GI_abort () at abort.c:89
#8  0x00007f08282e01a9 in qt_message_fatal (context=..., message=...) at global/qlogging.cpp:1364
#9  0x00007f08282ddcce in QMessageLogger::fatal (this=0x7fff0f67d0a0, msg=0x7f0828635358 "ASSERT: \"%s\" in file %s, line %d") at global/qlogging.cpp:669
#10 0x00007f08282d8440 in qt_assert (assertion=0x7f081fcaab99 "!d->m_url.isEmpty()", file=0x7f081fcaaa00 "/home/mck182/kf5-dev/src/kio/src/core/kfileitem.cpp", line=1453) at global/qglobal.cpp:2127
#11 0x00007f081fbff1c9 in KFileItem::currentMimeType (this=0x7fff0f67d240) at /home/mck182/kf5-dev/src/kio/src/core/kfileitem.cpp:1453
#12 0x00007f07073cf99c in ClipboardJob::iconResult (this=0x4c3cd60, item=...) at /home/mck182/kf5-dev/src/plasma-workspace/klipper/clipboardjob.cpp:148
#13 0x00007f07073cf72e in ClipboardJob::start (this=0x4c3cd60) at /home/mck182/kf5-dev/src/plasma-workspace/klipper/clipboardjob.cpp:108
#14 0x00007f082d400494 in Plasma::ServiceJobPrivate::autoStart (this=0x4c52160) at /home/mck182/kf5-dev/src/plasma-framework/src/plasma/servicejob.cpp:53
#15 0x00007f082d40077b in Plasma::ServiceJob::qt_static_metacall (_o=0x4c3cd60, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x4c3bc20) at /home/mck182/kf5-dev/build/plasma-framework/src/plasma/moc_servicejob.cpp:87
#16 0x00007f082859b8f7 in QMetaCallEvent::placeMetaCall (this=0x4c29260, object=0x4c3cd60) at kernel/qobject.cpp:487
#17 0x00007f082859c93c in QObject::event (this=0x4c3cd60, e=0x4c29260) at kernel/qobject.cpp:1241
#18 0x00007f08291b183a in QApplicationPrivate::notify_helper (this=0x1409770, receiver=0x4c3cd60, e=0x4c29260) at kernel/qapplication.cpp:3522
#19 0x00007f08291aee82 in QApplication::notify (this=0x7fff0f67de40, receiver=0x4c3cd60, e=0x4c29260) at kernel/qapplication.cpp:2975
#20 0x00007f082856142a in QCoreApplication::notifyInternal (this=0x7fff0f67de40, receiver=0x4c3cd60, event=0x4c29260) at kernel/qcoreapplication.cpp:935
#21 0x00007f0828564fb7 in QCoreApplication::sendEvent (receiver=0x4c3cd60, event=0x4c29260) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:237
#22 0x00007f08285626f5 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x13ff9f0) at kernel/qcoreapplication.cpp:1539
#23 0x00007f082856209a in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1397
#24 0x00007f08285d727c in postEventSourceDispatch (s=0x1465c30) at kernel/qeventdispatcher_glib.cpp:279
#25 0x00007f08235bde04 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f08235be048 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f08235be0ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007f08285d7a1d in QEventDispatcherGlib::processEvents (this=0x1465190, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#29 0x00007f081c5d43de in QPAEventDispatcherGlib::processEvents (this=0x1465190, flags=...) at eventdispatchers/qeventdispatcher_glib.cpp:123
#30 0x00007f082855e162 in QEventLoop::processEvents (this=0x7fff0f67dcf0, flags=...) at kernel/qeventloop.cpp:136
#31 0x00007f082855e423 in QEventLoop::exec (this=0x7fff0f67dcf0, flags=...) at kernel/qeventloop.cpp:212
#32 0x00007f0828561ae2 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1188
#33 0x00007f08289474e6 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1450
#34 0x00007f08291ae6a3 in QApplication::exec () at kernel/qapplication.cpp:2767
#35 0x000000000045e4a6 in main (argc=3, argv=0x7fff0f67df88) at /home/mck182/kf5-dev/src/plasma-workspace/shell/main.cpp:109
Comment 1 Martin Flöser 2014-09-01 07:07:41 UTC
@sebas: iconResult looks like something you added for the previews?
Comment 2 Sebastian Kügler 2014-09-01 09:22:39 UTC
Git commit cc2058512a6ccd4a89350bb03c81e16523998be4 by Sebastian Kügler.
Committed on 01/09/2014 at 09:19.
Pushed by sebas into branch 'master'.

Determine mimetype if necessary

Prevents a possible crasher.

M  +1    -1    klipper/clipboardjob.cpp

http://commits.kde.org/plasma-workspace/cc2058512a6ccd4a89350bb03c81e16523998be4
Comment 3 Sebastian Kügler 2014-09-01 12:47:57 UTC
*** Bug 338638 has been marked as a duplicate of this bug. ***