Determine mimetype if necessary

Prevents a possible crasher.

BUG:338659